@@ -66,7 +66,7 @@ The project's page is at http://winni.vdr-developer.org/epgsearch
 #include "menu_announcelist.h"
 #include "confdloader.h"
 
-static const char VERSION[]        = "0.9.24.rc1";
+static const char VERSION[]        = "0.9.24.rc2";
 static const char DESCRIPTION[]    =  trNOOP("search the EPG for repeats and more");
 
 // globals
